2017-01-15  Sauro Menna  <smenna@users.sourceforge.net>

    * Review test environment (tests folder)
      Created cobol program to setup environment (gctestsetup.cbl)
      and cobol program to execute test cases (gctestrun)
      This modules can be executed in Linux and Windows environment
    * README.txt (build_windows) updated for VStudio settings
    * Created makedist.bat dor dist Windows environment
    * Insert GCSORT1_0_V01.odt in doc folder

2016-12-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: changed package name to GCSORT and renamed
	  all files from ocsort -> gcsort in behalf of Sauro Menna

2016-11-12  Sauro Menna  <smenna@users.sourceforge.net>

	* Update Version 1.0.0 - by Sauro Menna 
    * New Conditional field  SS = SubString for INCLUDE/OMIT statement
       INCLUDE COND=(1,55,SS,EQ,C'SearchString') 
            - Search 'SearchString' in record area from pos 1 for len 55.
       INCLUDE COND=(25,5,SS,EQ,C'Str1 ,Str2 ,Str3 , Str4, Str5') 
            - Check if field in position 25 for len 5 is equal one of following value
                    'Str10,Str20,Str30,Str40,Str50'
    * Insert Cobol module and scripts in tests folder
    
2016-10-23  Sauro Menna  <smenna@users.sourceforge.net>

	* Update Version 1.0.0 - by Sauro Menna 
    * Used fields COB_FIELD for data type and integration with LIBCOB:
        fields         = cob_field/cob_attribute
        i/o operations = cob_open, cob_read, cob_write, cob_close, 
        compare/move   = cob_cmp_llint, cob_cmp, cob_move
    * Removed bufferedreader and bufferedwriter modules
    * Change memory mapped files use. Only for temporary files. 
    * Checked potential errors problems for the allocation memory 
    * Included new file type INDEXED (keys definition)
    * Included new file type RELATIVE (key relative)
    * Errors code review 
    * Insert details for Parser/Scanner errors 
    * Review Help (ocosort --help)