@@ -1,24 +1,18 @@
-# RM=rm -f
-RM=del 
+RM=rm -f 
 MKDIR=mkdir -p
 INSTALL=cp
-BISON=win_bison
-FLEX=win_flex
-CC=gcc -c  -D_FILE_OFFSET_BITS="64" -o
-# CCFLAGS=-Wall 
-# CCFLAGS=-W  -IC:\gcsort_1_0_0\libcob\ -IC:\gcsort_1_0_0\libcob\libcob\libcob -IC:\gcsort_1_0_0\gmp_mpir
-CCFLAGS=-W  -IC:\gcsort_1_0_0\libcob\ -IC:\gcsort_1_0_0\gmp_mpir
+BISON=bison
+FLEX=flex
+CC=gcc -std=gnu99 -D_FILE_OFFSET_BITS="64"  -c -o  
 LD=gcc -o 
 LDFLAGS= -O3
-LIBS=-LC:\gcsort_1_0_0\LIB -LC..\gmp_mpir -lmpir -llibcob 
+LIBS=-L${exec_prefix}/lib -L/usr/local/lib/ -lcob -lm -lgmp
 
 ifeq ($(MAKECMDGOALS),Debug)
-        #DEBUG=YES
-		DEBUG=NO
+        DEBUG=YES
 endif
 ifeq ($(MAKECMDGOALS),cleanDebug)
-        #DEBUG=YES
-		DEBUG=NO
+        DEBUG=YES
 endif
 
 ifeq ($(DEBUG),YES)
@@ -27,25 +21,24 @@ else
     DEBUGFLAGS=
 endif
 
-TARGET=gcsort.exe
+TARGET=gcsort
 OBJS=\
-        bufferedreader.o \
-		bufferedwriter.o \
-		condfield.o \
-        gcsorthelp.o \
-        gcsort.o \
-		fieldvalue.o \
-		file.o \
-        inrec.o \
-        job.o \
-        mmfioc.o \
-        outfil.o \
-		outrec.o \
-		parser.o \
-		scanner.o \
-		sortfield.o \
-        sumfield.o \
-		utils.o
+	condfield.o \
+    gcsorthelp.o \
+    gcsort.o \
+	fieldvalue.o \
+	file.o \
+	keyidxrel.o \
+    inrec.o \
+    job.o \
+    mmfioc.o \
+    outfil.o \
+	outrec.o \
+	parser.o \
+	scanner.o \
+	sortfield.o \
+    sumfield.o \
+	utils.o
  
 GENERATED=parser.h parser.c scanner.h scanner.c
 
@@ -63,32 +56,34 @@ $(TARGET): $(OBJS)
 		$(CC) $@ $< $(CCFLAGS) $(DEBUGFLAGS)
 
 parser.c parser.h: parser.y
+# windows   win_bison --defines=parser.h -o parser.c parser.y
 		$(BISON) --defines=parser.h -o parser.c parser.y
 
-scanner.c scanner.h: scanner.l
-		$(FLEX) --header-file=scanner.h -o scanner.c scanner.l
 
-bufferedreader.o:bufferedreader.h 
-bufferedwriter.o:bufferedwriter.h 
+scanner.c scanner.h: scanner.l
+# windows   win_flex.exe  --header-file=scanner.h  -d --nounistd --wincompat -o scanner.c scanner.l
+		 $(FLEX) --header-file=scanner.h   --debug  -o scanner.c scanner.l
+
+		# $(FLEX) --header-file=scanner.h -o scanner.c scanner.l
+
 condfield.o:condfield.h gcsort.h file.h job.h utils.h fieldvalue.h sortfield.h sumfield.h
 fieldvalue.o:fieldvalue.h utils.h job.h
 file.o:file.h utils.h job.h
 inrec.o:inrec.h fieldvalue.h utils.h job.h
-job.o:gcsort.h job.h file.h sortfield.h condfield.h outrec.h inrec.h parser.h scanner.h sortfield.h SumField.h utils.h outfil.h bufferedreader.h mmfioc.h SumField.h utils.h outfil.h bufferedwriter.h
-mmfioc.o:mmfioc.h gcsort.h job.h
+job.o:gcsort.h job.h file.h sortfield.h condfield.h outrec.h inrec.h parser.h scanner.h sortfield.h utils.h outfil.h sumfield.h utils.h outfil.h 
+keyidxrel.o: keyidxrel.h file.h
+mmfioc.o:mmfioc.h job.h utils.h
 gcsorthelp.o:
 gcsort.o:gcsort.h job.h 
-outfil.o:outfil.h  gcsort.h job.h file.h sortfield.h condfield.h outrec.h parser.h scanner.h sortfield.h SumField.h utils.h 
+outfil.o:outfil.h  gcsort.h job.h file.h sortfield.h condfield.h outrec.h parser.h scanner.h sortfield.h sumfield.h utils.h 
 outrec.o:outrec.h fieldvalue.h utils.h job.h
-parser.o:gcsort.h file.h job.h sortfield.h condfield.h fieldvalue.h outrec.h utils.h file.h inrec.h outfil.h SumField.h 
-scanner.o:parser.h 
-sortfield.o:gcsort.h utils.h sumfield.h job.h
+parser.o:gcsort.h file.h job.h sortfield.h condfield.h fieldvalue.h outrec.h utils.h file.h inrec.h outfil.h sumfield.h 
+scanner.o:parser.h utils.h 
+sortfield.o:gcsort.h utils.h sumfield.h job.h sortfield.h
 sumfield.o:sumfield.h gcsort.h utils.h job.h
 utils.o:utils.h
 
 clean:
-#		$(RM) $(TARGET) $(OBJS) $(GENERATED)
-#		$(RM) $(TARGET) 
-		$(RM) $(OBJS) 
+		$(RM) $(TARGET) $(OBJS) $(GENERATED)
 cleanDebug:clean
 cleanRelease:clean
