@@ -51,6 +51,7 @@
        01  save-record-sort              pic x(90).
       * ============================= *
        77 record-counter-in              pic 9(7) value zero.
+       77 record-counter-skip            pic 9(7) value zero.
        77 record-counter-out             pic 9(7) value zero.
        77 bIsFirstTime                   pic 9    value zero.       
        77 bIsPending                     pic 9    value zero.       
@@ -113,8 +114,9 @@
       ** test      if (in-ch-field(1:2) = "GG")                                   ## filtering data    
            if ((in-ch-field(1:2) = "GG")  AND                                 ## filtering data    
                (in-zd-field < 35))
+			   add 1 to record-counter-skip
            else
-                    release sort-data from infile-record
+				release sort-data from infile-record
            end-if
            .
       *
